ShapeImageView增加设置四个边角圆角半径的接口

--- a/AndroidsDemo/res/layout/activity_shapeimageview.xml
+++ b/AndroidsDemo/res/layout/activity_shapeimageview.xml
@@ -4,75 +4,84 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
-             android:padding="5dp"
-             android:orientation="vertical">
+             android:orientation="vertical"
+             android:padding="5dp">
 
-    <ScrollView android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:orientation="vertical">
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-                          android:orientation="horizontal">
-                <cn.forward.androids.views.ShapeImageView
-                        android:layout_width="110dp"
-                        android:layout_height="110dp"
-                        app:siv_shape="circle"
-                        android:src="@drawable/world_map"/>
-                <cn.forward.androids.views.ShapeImageView
-                        android:layout_marginLeft="5dp"
-                        android:layout_width="110dp"
-                        android:layout_height="110dp"
-                        app:siv_shape="rect"
-                        app:siv_round_radius="25dp"
-                        android:src="@drawable/world_map"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <cn.forward.androids.views.ShapeImageView
-                        android:layout_marginLeft="5dp"
-                        android:layout_width="80dp"
-                        android:layout_height="110dp"
-                        app:siv_shape="oval"
-                        app:siv_round_radius="15dp"
-                        app:siv_border_size="0dp"
-                        app:siv_border_color="#ffffff"
-                        android:src="@drawable/world_map"/>
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:src="@drawable/world_map"
+                    app:siv_shape="circle"/>
+
+                <cn.forward.androids.views.ShapeImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/world_map"
+                    app:siv_round_radius="25dp"
+                    app:siv_shape="rect"/>
+
+                <cn.forward.androids.views.ShapeImageView
+                    android:layout_width="80dp"
+                    android:layout_height="110dp"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/world_map"
+                    app:siv_border_color="#ffffff"
+                    app:siv_border_size="0dp"
+                    app:siv_round_radius="15dp"
+                    app:siv_shape="oval"/>
             </LinearLayout>
 
             <cn.forward.androids.views.ShapeImageView
-                    android:layout_marginTop="10dp"
-                    android:background="#000"
-                    android:layout_marginLeft="5dp"
-                    android:layout_width="220dp"
-                    android:layout_height="110dp"
-                    app:siv_shape="circle"
-                    app:siv_round_radius="15dp"
-                    app:siv_border_size="2dp"
-                    app:siv_border_color="#ffffff"
-                    android:src="@drawable/world_map"/>
+                android:layout_width="220dp"
+                android:layout_height="110dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:background="#000"
+                android:src="@drawable/world_map"
+                app:siv_border_color="#ffffff"
+                app:siv_border_size="2dp"
+                app:siv_round_radius="15dp"
+                app:siv_shape="circle"/>
 
             <cn.forward.androids.views.ShapeImageView
-                    android:layout_marginTop="10dp"
-                    android:background="#000000"
-                    android:layout_marginLeft="5dp"
-                    android:layout_width="220dp"
-                    android:layout_height="110dp"
-                    app:siv_shape="rect"
-                    app:siv_round_radius="15dp"
-                    app:siv_border_size="3dp"
-                    app:siv_border_color="#00ff00"
-                    android:src="@drawable/world_map"/>
+                android:layout_width="220dp"
+                android:layout_height="110dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:background="#000000"
+                android:src="@drawable/world_map"
+                app:siv_border_color="#00ff00"
+                app:siv_border_size="3dp"
+                app:siv_round_radius="15dp"
+                app:siv_round_radius_leftBottom="0dp"
+                app:siv_round_radius_rightBottom="0dp"
+                app:siv_shape="rect"/>
+
             <cn.forward.androids.views.ShapeImageView
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_width="220dp"
-                    android:layout_height="110dp"
-                    app:siv_shape="oval"
-                    app:siv_round_radius="15dp"
-                    app:siv_border_size="5dp"
-                    app:siv_border_color="#ff0000"
-                    android:src="@drawable/world_map"/>
+                android:layout_width="220dp"
+                android:layout_height="110dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/world_map"
+                app:siv_border_color="#ff0000"
+                app:siv_border_size="5dp"
+                app:siv_round_radius="15dp"
+                app:siv_shape="oval"/>
         </LinearLayout>
     </ScrollView>
 
