图片绑定到view时可设置动画；SView可设置selected状态

--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -1,182 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="#ffffff"
-              android:orientation="vertical"
-              android:padding="5dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+    >
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:background="#dddd00"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="false"
-            app:miv_mask_color="#88000000"
-            app:miv_mask_level="background"/>
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_weight="1"/>
-
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:background="#000000"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="false"
-            app:miv_mask_color="#88ffffff"
-            app:miv_mask_level="background"/>
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:layout_weight="1"/>
-
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:background="@drawable/bg2"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="true"
-            app:miv_mask_color="#88000000"
-            app:miv_mask_level="background"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:background="@drawable/bg"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="true"
-            app:miv_mask_color="#880000ff"
-            app:miv_mask_level="foreground"/>
-
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/bg"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="false"
-            app:miv_mask_color="#880000ff"
-            app:miv_mask_level="foreground"
-            />
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="前景遮罩"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:background="#ffffff"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:background="@drawable/bg"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="true"
-            app:miv_mask_color="#880000ff"
-            app:miv_mask_level="background"/>
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:background="#dddd00"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="false"
+                    app:miv_mask_color="#88000000"
+                    app:miv_mask_level="background"/>
 
-        <cn.forward.androids.views.MaskImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/bg"
-            android:clickable="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
-            app:miv_is_ignore_alpha="false"
-            app:miv_mask_color="#880000ff"
-            app:miv_mask_level="background"
-            />
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="背景遮罩"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            />
-    </LinearLayout>
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:background="#000000"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="false"
+                    app:miv_mask_color="#88ffffff"
+                    app:miv_mask_level="background"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
 
-        <cn.forward.androids.views.STextView
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="TextView"
-            android:textColor="#000000"
-            app:mtv_text_color_pressed="#ff0000"
-            app:sel_background="#00ff00"
-            app:sel_background_border_color="#ff0000"
-            app:sel_background_border_pressed="#888888"
-            app:sel_background_border_width="4dp"
-            app:sel_background_corner_topLeft="0dp"
-            app:sel_background_corner_topRight="0dp"
-            app:sel_background_corners="10dp"
-            app:sel_background_pressed="#0000ff"
-            />
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:background="@drawable/bg2"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="true"
+                    app:miv_mask_color="#88000000"
+                    app:miv_mask_level="background"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:background="@drawable/bg"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="true"
+                    app:miv_mask_color="#880000ff"
+                    app:miv_mask_level="foreground"/>
+
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/bg"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="false"
+                    app:miv_mask_color="#880000ff"
+                    app:miv_mask_level="foreground"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="前景遮罩"
+                    android:textColor="#000000"
+                    android:textSize="20dp"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:background="@drawable/bg"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="true"
+                    app:miv_mask_color="#880000ff"
+                    app:miv_mask_level="background"/>
+
+                <cn.forward.androids.views.MaskImageView
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/bg"
+                    android:clickable="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_launcher"
+                    app:miv_is_ignore_alpha="false"
+                    app:miv_mask_color="#880000ff"
+                    app:miv_mask_level="background"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="背景遮罩"
+                    android:textColor="#000000"
+                    android:textSize="20dp"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <cn.forward.androids.views.STextView
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:textColor="#000000"
+                    app:stv_text_color_pressed="#ff0000"
+                    app:sel_background="#00ff00"
+                    app:sel_background_border_color="#ff0000"
+                    app:sel_background_border_pressed="#888888"
+                    app:sel_background_border_width="4dp"
+                    app:sel_background_corner_topLeft="0dp"
+                    app:sel_background_corner_topRight="0dp"
+                    app:sel_background_corners="10dp"
+                    app:sel_background_pressed="#0000ff"
+                    />
 
 
-        <cn.forward.androids.views.SFrameLayout
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="10dp"
-            android:clickable="true"
-            android:gravity="center"
-            app:sel_background="#0000ff"
-            app:sel_background_border_color="#454545"
-            app:sel_background_border_pressed="#888888"
-            app:sel_background_border_width="8dp"
-            app:sel_background_corners="10dp"
-            app:sel_background_pressed="#ff0000"
-            />
-    </LinearLayout>
-</LinearLayout>
+                <cn.forward.androids.views.SFrameLayout
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    android:layout_marginLeft="10dp"
+                    android:clickable="true"
+                    android:gravity="center"
+                    app:sel_background="#0000ff"
+                    app:sel_background_border_color="#454545"
+                    app:sel_background_border_pressed="#888888"
+                    app:sel_background_border_width="8dp"
+                    app:sel_background_corners="10dp"
+                    app:sel_background_pressed="#ff0000"
+                    />
+            </LinearLayout>
+
+            <cn.forward.androids.views.STextView
+                android:id="@+id/stextview"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="TextView2"
+                android:textColor="#000000"
+                app:injectListener="true"
+                app:stv_text_color_pressed="#ff0000"
+                app:stv_text_color_selected="#ff8800"
+                app:sel_background="#00ff00"
+                app:sel_background_border_color="#ff0000"
+                app:sel_background_border_pressed="#888888"
+                app:sel_background_border_selected="#880088"
+                app:sel_background_border_width="4dp"
+                app:sel_background_corner_bottomRight="10dp"
+                app:sel_background_pressed="#0000ff"
+                app:sel_background_selected="#0088ff"
+                />
+        </LinearLayout>
+    </ScrollView>
+</FrameLayout>
