--- a/androids/res/values/attrs.xml
+++ b/androids/res/values/attrs.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="View">
-        <attr name="injectListener" format="boolean"/>
-    </declare-styleable>
-
     <declare-styleable name="RatioImageView">
 
         <!-- 宽度是否根据src图片的比例来测量（高度已知） -->
@@ -79,12 +75,21 @@
 
     <!--字体颜色遮罩-->
     <declare-styleable name="STextView">
+        <attr name="stv_text_color_selected" format="color"/>
+        <attr name="stv_text_color_pressed" format="color"/>
+        <attr name="stv_text_color_disable" format="color"/>
+
+        <!-- 过时的配置，等于stv开头的熟悉-->
         <attr name="mtv_text_color_pressed" format="color"/>
         <attr name="mtv_text_color_disable" format="color"/>
     </declare-styleable>
 
-    <!-- 可以直接在布局文件中直接设置selector-->
-    <declare-styleable name="Selector">
+    <!-- 设置view相关selector熟悉-->
+    <declare-styleable name="View">
+
+        <attr name="injectListener" format="boolean"/>
+
+        <!-- 可以直接在布局文件中直接设置selector-->
         <!--只有设置了mtv_background其他属性才生效-->
         <attr name="sel_background" format="color"/>
         <attr name="sel_background_shape" format="enum">
@@ -93,8 +98,6 @@
             <enum name="line" value="2"/>
             <enum name="ring" value="3"/>
         </attr>
-        <attr name="sel_background_pressed" format="color"/>
-        <attr name="sel_background_border_pressed" format="color"/>
         <attr name="sel_background_corners" format="dimension"/>
         <attr name="sel_background_corner_topLeft" format="dimension"/>
         <attr name="sel_background_corner_topRight" format="dimension"/>
@@ -102,6 +105,11 @@
         <attr name="sel_background_corner_bottomRight" format="dimension"/>
         <attr name="sel_background_border_color" format="color"/>
         <attr name="sel_background_border_width" format="dimension"/>
+
+        <attr name="sel_background_pressed" format="color"/>
+        <attr name="sel_background_border_pressed" format="color"/>
+        <attr name="sel_background_selected" format="color"/>
+        <attr name="sel_background_border_selected" format="color"/>
     </declare-styleable>
 
 </resources>
