--- a/androids/res/values/attrs.xml
+++ b/androids/res/values/attrs.xml
@@ -62,6 +62,21 @@
         <attr name="spv_is_circulation" format="boolean"/>
         <!-- 不允许父组件拦截触摸事件，设置为true为不允许拦截，此时该设置才生效 -->
         <attr name="spv_disallow_intercept_touch" format="boolean"/>
+
+        <!-- 滚动的方向-->
+        <attr name="spv_orientation" format="string">
+            <enum name="horizontal" value="1"/>
+            <enum name="vertical" value="2"/>
+        </attr>
+        <!-- 绘制图片的方式-->
+        <attr name="spv_draw_bitmap_mode" format="string">
+            <enum name="fill" value="1"/>
+            <enum name="center" value="2"/>
+            <enum name="size" value="3"/>
+        </attr>
+        <!-- 绘制图片的方式为size时，指定的图片绘制大小-->
+        <attr name="spv_draw_bitmap_width" format="dimension"/>
+        <attr name="spv_draw_bitmap_height" format="dimension"/>
     </declare-styleable>
 
     <declare-styleable name="RoundProgressBar">
